--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <meta property="og:site_name" content="MU">
     <meta property="og:image" content="assets/logo-mu.svg">
     <meta property="og:image:alt"
-        content="Il logo di MU ha la forma di una mandorla stilizzata con il bordo nero e lo sfondo bianco">
+        content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
     <meta property="og:image:secure_url" content="assets/logo-mu.svg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
@@ -31,7 +31,7 @@
         content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:image" content="assets/logo-mu.svg">
     <meta name="twitter:image:alt"
-        content="Il logo di MU ha la forma di una mandorla stilizzata con il bordo nero e lo sfondo bianco">
+        content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
 
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
@@ -46,7 +46,21 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="content--image"><img src="assets/logo-mu.svg"></div>
+            <!-- <div class="content--image"><img src="assets/logo-mu.svg"></div> -->
+            <ul class="content--nav">
+                <li class="nav--link">
+                    <h2>Email</h2>
+                    <p><a href="mailto:info@mmmu.it">info@mmmu.it</a></p>
+                </li>
+                <li class="nav--link">
+                    <h2>Sostieni MU</h2>
+                    <p><a href="">Compila il form online</a></p>
+                </li>
+                <li class="nav--link">
+                    <h2>Newsletter</h2>
+                    <p><a href="">Iscriviti</a></p>
+                </li>
+            </ul>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -60,7 +74,7 @@
                     circuitazione di pratiche e poetiche liminali; promuovendo l’ascolto come azione attiva e veicolo di
                     relazione agli spazi, agli individui e agli strumenti.</p>
             </div>
-            <div class="content--block">
+            <!-- <div class="content--block">
                 <h3>Email</h3>
                 <p><a href="mailto:info@mmmu.it">info@mmmu.it</a></p>
             </div>
@@ -70,29 +84,34 @@
                 <p>Socio Ordinario 5€
                     <br>Socio Sostenitore 15€
                 </p>
-            </div>
-            <div class="content--block --info">
+            </div> -->
+            <!-- <div class="content--block --info">
                 <p>Associazione Culturale MU</p>
                 <p>via Giuseppe Verzaglia, 4
                     <br>47521 Cesena (FC) Italia
                 </p>
-            </div>
+            </div> -->
             <div class="content--block">
-                <p><a class="btn--open" href="#trasparenza">Trasparenza</a></p>
+                <p><a class="btn--open">Trasparenza</a></p>
             </div>
             <div class="content--block content--open --info" id="trasparenza">
+                <p>Associazione Culturale MU</p>
+                <p>via Giuseppe Verzaglia, 4
+                    <br>47521 Cesena (FC) Italia
+                </p>
                 <p>CF 90074590408
                     <br>P.IVA 04256550403
                 </p>
                 <p>Dati di cui all’articolo 1, commi 125-129, L. 124/2017
                     <br>Anno 2019
                 </p>
-                <div><img src="assets/uploads/images/trasparenza-2019.png" width="100%"></div>
+                <div><img src="assets/uploads/about/trasparenza-2019.png" width="100%"></div>
             </div>
         </section>
         <div class="nav--btn">
-            <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
-            <h3><a href="index.html">Mu</a></h3>
+            <!-- <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
+            <h3><a href="index.html">Mu</a></h3> -->
+            <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
         </div>
     </main>
     <script src="script.js"></script>
