--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:site_name" content="MU">
     <meta property="og:image" content="assets/logo-mu.svg">
     <meta property="og:image:alt"
-        content="Il logo di MU ha la forma di una mandorla stilizzata con il bordo nero e lo sfondo bianco">
+        content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
     <meta property="og:image:secure_url" content="assets/logo-mu.svg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
@@ -31,7 +31,7 @@
         content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:image" content="assets/logo-mu.svg">
     <meta name="twitter:image:alt"
-        content="Il logo di MU ha la forma di una mandorla stilizzata con il bordo nero e lo sfondo bianco">
+        content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
 
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
