--- a/tule.html
+++ b/tule.html
@@ -46,12 +46,11 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="content--image"><img src="assets/uploads/images/Tule2021-alta-02.jpg"></div>
+            <div class="content--image"><img src="assets/uploads/eventi/tule/tule-2021.jpg"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
                 <h2>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h2>
-                <!-- <h3>Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3> -->
             </div>
             <div class="content--block">
                 <p>TULE è una rassegna culturale che, attraverso sessioni di ascolto, soundwalk, e workshop, intende
@@ -65,10 +64,10 @@
             </div>
             <div class="content--block">
                 <div class="nav--link">
-                    <h2><a href="tule-2021.html">Tule 2021</a></h2>
+                    <h2><a href="/2021/082021-tule.html">Tule 2021</a></h2>
                 </div>
                 <div class="nav--link">
-                    <h2><a href="">Tule 2020</a></h2>
+                    <h2><a href="/2020/082020-tule.html">Tule 2020</a></h2>
                 </div>
                 <div class="nav--link">
                     <h2><a href="">Tule 2018</a></h2>
@@ -79,8 +78,9 @@
             </div>
         </section>
         <div class="nav--btn">
-            <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
-            <h3><a href="index.html">Mu</a></h3>
+            <!-- <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
+            <h3><a href="index.html">Mu</a></h3> -->
+            <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
         </div>
     </main>
 </body>
